# cgo-rs

./: Cargo.toml  README.md
cgo-test/: Cargo.toml  build.rs
src/: lib.rs
