[package]
name = "cgo_oligami"
version = "0.3.3"
edition = "2021"
authors = ["Ryan Fowler", "oligami"]
description = "A library for build scripts to compile custom Go code"
repository = "https://github.com/ryanfowler/cgo-rs"
documentation = "https://docs.rs/cgo_oligami"
license = "MIT"
keywords = ["build-dependencies"]
categories = ["development-tools::build-utils"]

[dependencies]
cc = { version = "1.0" }
